RICA: adjust product cards spacing, text fixes; slow/adjust marquee speed; navbar collapse fix

--- a/RICAProducts.html
+++ b/RICAProducts.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mobile_fixes.css">
 </head>
-<body>
+<body class="rica-page">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="min-height: 64px; background-color: rgba(137, 135, 108, 0.9);">
         <div class="container">
@@ -53,13 +53,13 @@
     <section class="hero-small bg-light py-5" style="margin-top: 60px;">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-8 text-center">
+                <div class="col-md-8 text-start text-lg-center">
                     <img src="Images/Ricalogo.png" alt="RICA Logo" class="img-fluid mb-4" style="max-height: 100px; background-color: #f8f9fa; border: 2px solid black; padding: 15px; border-radius: 8px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                     <div style="display: none; background-color: #f8f9fa; border: 2px solid black; padding: 20px; border-radius: 8px; color: #9A0708; font-weight: bold; font-size: 1.2em; margin-bottom: 20px;">
                         [RICA LOGO]
                     </div>
                     <h1 class="mb-4" style="color: #6f6e57;">RICA Produktwelt</h1>
-                    <p class="lead">Entdecken Sie die umfassende RICA Produktpalette -<br>von veganer Haarfarbe bis zu luxuriöser Naturpflege</p>
+                    <p class="lead">Entdecken Sie die umfassende RICA Produktpalette. Von veganer Haarfarbe bis zu luxuriöser Naturpflege.</p>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <div class="card shadow-lg mb-5">
+                    <div class="card product-card shadow-lg">
                         <div class="card-body p-5">
                             <div class="row align-items-center">
                                 <div class="col-md-6">
@@ -114,7 +114,7 @@
                                     </div>
                                     <p class="text-muted"><em>Weil wahre Schönheit Rücksicht nimmt.</em></p>
                                 </div>
-                                <div class="col-md-6 text-center">
+                                <div class="col-md-6 text-start text-lg-center">
                                     <div class="d-flex justify-content-center mb-3">
                                         <img src="Images/RICA/Chromoplus/YESVEGAN-CHROMOPLUS1200x900.jpg" alt="Chromoplus Vegan" class="rounded shadow" style="max-height: 280px; width: 100%; object-fit: cover;">
                                     </div>
@@ -136,13 +136,13 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <div class="card shadow-lg mb-5">
+                    <div class="card product-card shadow-lg">
                         <div class="card-body p-5">
                             <div class="row align-items-center">
                                 <div class="col-md-6 order-md-2">
                                     <h2 class="mb-4" style="color: #6f6e57;">Colordem</h2>
                                     <h4 class="mb-3" style="color: #6f6e57;">Die sanfte Kraft der Farbe</h4>
-                                    <p class="lead">Die neue Generation der demi-permanenten Tönung - ammoniakfrei, sanft und effektiv.</p>
+                                    <p class="lead">Die neue Generation der demi-permanenten Tönung – ammoniakfrei, sanft und effektiv.</p>
 
                                     <ul class="list-unstyled mb-4">
                                         <li class="mb-2"><span class="me-2">•</span><strong>Ammoniakfrei</strong> - besonders sanftes Farberlebnis</li>
@@ -151,9 +151,9 @@
                                         <li class="mb-2"><span class="me-2">•</span><strong>Mit Aloe Vera & Kaktusfeigenextrakt</strong></li>
                                     </ul>
 
-                                    <p class="text-muted"><em>Ideal für empfindliches Haar - respektiert die Haarstruktur und schützt die Kopfhaut</em></p>
+                                    <p class="text-muted"><em>Ideal für empfindliches Haar – respektiert die Haarstruktur und schützt die Kopfhaut.</em></p>
                                 </div>
-                                <div class="col-md-6 order-md-1 text-center">
+                                <div class="col-md-6 order-md-1 text-start text-lg-center">
                                     <img src="Images/RICA/Colordem/POST_MARZO21_COLORDEM_product.jpg" alt="Colordem Produkte" class="img-fluid rounded shadow" style="max-height: 400px; object-fit: cover;">
                                 </div>
                             </div>
@@ -169,7 +169,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <div class="card shadow-lg mb-5">
+                    <div class="card product-card shadow-lg">
                         <div class="card-body p-5">
                             <div class="row align-items-center">
                                 <div class="col-md-6">
@@ -187,7 +187,7 @@
 
                                     <p class="text-muted"><em>Eine neue Dimension der Haargesundheit für geschwächtes, strapaziertes oder reiferes Haar.</em></p>
                                 </div>
-                                <div class="col-md-6 text-center">
+                                <div class="col-md-6 text-start text-lg-center">
                                     <img src="Images/RICA/Gorepair/GOREPAIR-PRODOTTO.png" alt="Gorepair Produkt" class="img-fluid rounded shadow mb-3" style="max-height: 280px; object-fit: cover;">
                                     <img src="Images/RICA/Gorepair/IG_GOREPAIR_Product_Model_SEPT.png" alt="Gorepair Model" class="img-fluid rounded shadow" style="max-height: 280px; object-fit: cover;">
                                 </div>
@@ -204,7 +204,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <div class="card shadow-lg mb-5">
+                    <div class="card product-card shadow-lg">
                         <div class="card-body p-5">
                             <div class="row align-items-center">
                                 <div class="col-md-6 order-md-2">
@@ -217,15 +217,15 @@
                                             <h6 class="mb-3">Farbpflege mit System:</h6>
                                             <ul class="list-unstyled mb-3">
                                                 <li class="mb-1"><span class="me-2">•</span>Vitamin E & Ceramide</li>
-                                                <li class="mb-1"><span class="me-2">•</span>Opuntienöl & Walnussschalenextrakt</li>
+                                                <li class="mb-1"><span class="me-2">•</span>Opuntia-Öl & Walnussschalenextrakt</li>
                                                 <li class="mb-1"><span class="me-2">•</span>UVA-/UVB-Filter</li>
                                             </ul>
                                         </div>
                                     </div>
-                                    <p class="text-muted"><em>Colour-Safe-Formel - für langanhaltend leuchtende Farbe</em></p>
+                                    <p class="text-muted"><em>Colour-Safe-Formel – für langanhaltend leuchtende Farbe.</em></p>
 
                                 </div>
-                                <div class="col-md-6 order-md-1 text-center">
+                                <div class="col-md-6 order-md-1 text-start text-lg-center">
                                     <img src="Images/RICA/Naturica/POST_FEB23_IG_FOTO6.png" alt="Naturica Produkte" class="img-fluid rounded shadow mb-3" style="max-height: 280px; object-fit: cover;">
                                     <img src="Images/RICA/Naturica/IG_TRITTICO-BLOND_3.png" alt="Naturica Blond" class="img-fluid rounded shadow" style="max-height: 280px; object-fit: cover;">
                                 </div>
@@ -242,7 +242,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <div class="card shadow-lg mb-5">
+                    <div class="card product-card shadow-lg">
                         <div class="card-body p-5">
                             <div class="row align-items-center">
                                 <div class="col-md-6">
@@ -271,7 +271,7 @@
 
                                     <p class="text-muted"><em>Natürlicher Luxus für anspruchsvolles Haar.</em></p>
                                 </div>
-                                <div class="col-md-6 text-center">
+                                <div class="col-md-6 text-start text-lg-center">
                                     <div class="row justify-content-center">
                                         <div class="col-6">
                                             <img src="Images/RICA/OpuntiaOil/PED-JAN-25_1_DE.png" alt="Opuntia Oil Produkt" class="img-fluid rounded shadow" style="max-height: 200px; object-fit: cover;">
@@ -297,7 +297,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <div class="card shadow-lg mb-5">
+                    <div class="card product-card shadow-lg">
                         <div class="card-body p-5">
                             <div class="row align-items-center">
                                 <div class="col-md-6 order-md-2">
@@ -312,9 +312,9 @@
                                         <li class="mb-2"><span class="me-2">•</span><strong>Kopfhaut</strong> - beruhigt und schützt</li>
                                     </ul>
 
-                                    <p class="text-muted"><em>Ohne Kompromisse. Ohne überflüssige Zusätze. Für Männer, die auf echte Qualität setzen</em></p>
+                                    <p class="text-muted"><em>Ohne Kompromisse. Ohne überflüssige Zusätze. Für Männer, die auf echte Qualität setzen.</em></p>
                                 </div>
-                                <div class="col-md-6 order-md-1 text-center">
+                                <div class="col-md-6 order-md-1 text-start text-lg-center">
                                     <img src="Images/RICA/OpuntiaOil for Men/IG_OPUNTIA-OIL-FORMEN_1COVER.jpg" alt="Opuntia Oil for Men" class="img-fluid rounded shadow" style="max-height: 400px; object-fit: cover;">
                                 </div>
                             </div>
@@ -330,7 +330,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <div class="card shadow-lg mb-5">
+                    <div class="card product-card shadow-lg">
                         <div class="card-body p-5">
                             <div class="row align-items-center">
                                 <div class="col-md-6">
@@ -356,7 +356,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-6 text-center">
+                                <div class="col-md-6 text-start text-lg-center">
                                     <div class="row justify-content-center">
                                         <div class="col-6">
                                             <img src="Images/RICA/Styling/14_07_23_SEA_SALT__product_IG.png" alt="Sea Salt Styling" class="img-fluid rounded shadow" style="max-height: 200px; object-fit: cover;">
@@ -381,7 +381,7 @@
     <section class="py-4">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-6 text-center">
+                <div class="col-md-6 text-start text-lg-center">
                     <p class="mb-3">Erfahren Sie mehr über RICA:</p>
                     <a href="https://ricahaircare.com/en/" target="_blank" class="btn btn-outline-primary btn-lg" style="border-color: #89876c; color: #89876c; transition: all 0.3s ease;" onmouseover="this.style.backgroundColor='#89876c'; this.style.color='white';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#89876c';">
                         <i class="bi bi-globe me-2"></i>Zur RICA Website
@@ -396,7 +396,7 @@
     <section class="py-5 bg-light">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-8 text-center">
+                <div class="col-md-8 text-start text-lg-center">
                     <h3 class="mb-4">Entdecken Sie RICA in unserem Salon</h3>
                     <p class="lead mb-4">Welche RICA Produktlinie ist perfekt für Sie? Lassen Sie sich von unseren Experten individuell beraten!</p>
                     <div class="row">
@@ -420,7 +420,7 @@
     <section id="impressum" class="py-4">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-6 text-center">
+                <div class="col-md-6 text-start text-lg-center">
                     <h4 class="mb-3">Rechtliche Hinweise</h4>
                     <p class="mb-4">Für rechtliche Informationen und Datenschutzbestimmungen besuchen Sie unser <a href="impressum.html" class="text-decoration-none" style="color: #6f6e57;">Impressum</a>.</p>
                 </div>
@@ -429,7 +429,7 @@
     </section>
 
     <footer class="py-3 text-white" style="background-color: #89876c; border-top: 1px solid #89876c; margin-top: 20px">
-        <div class="container text-center" >
+    <div class="container text-start text-lg-center" >
             <p>&copy; 2025 MUCKE & MÄHNE. Alle Rechte vorbehalten.</p>
         </div>
     </footer>
