Hero-Bereich: Willkommen-Text und Logo maximal nach oben verschoben, weitere Anpassungen

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                 title: "Friseurmeisterin",
                 photo: "Images/Tina_kl.jpg",
                 experience: "Ich bin Friseurin aus Leidenschaft und seit 2005 Friseurmeisterin. Ich bin auf das Damenfach spezialisiert - besonders auf Schnitt, Farbe und Strähnen in all ihren Facetten. Egal ob natürlich, klassisch, oder kreativ.",
-                personal: "An meinem Beruf liebe ich es, meine Kundinnen individuell zu beraten und gemeinsam mit ihnen ihren ganz persönlichen Look zu kreieren. Und wenn sie am Ende mit einem Lächeln aus dem Salon gehen, ist das für mich das Schönste an meiner Arbeit. Endlich kann ich meinen Traum vom eigenen Friseursalon mit meinem Mann verwirklichen! Wenn ich nicht im Salon bin, liebe ich es, mit meiner Familie zu reisen, gutes Essen zu genießen oder in unserem Garten alles Mögliche anzubauen. Ich freue mich darauf, Sie kennenzulernen!",
+                personal: "An meinem Beruf liebe ich es, meine Kundinnen individuell zu beraten und gemeinsam mit ihnen ihren ganz persönlichen Look zu kreieren. Und wenn Sie am Ende mit einem Lächeln aus dem Salon gehen, ist das für mich das Schönste an meiner Arbeit. Endlich kann ich meinen Traum vom eigenen Friseursalon mit meinem Mann verwirklichen! Wenn ich nicht im Salon bin, liebe ich es, mit meiner Familie zu reisen, gutes Essen zu genießen oder in unserem Garten alles Mögliche anzubauen. Ich freue mich darauf, Sie kennenzulernen!",
                 services: [
                     "Damenhaarschnitte & Styling",
                     "Komplexe Colorationen & Balayage",
@@ -688,8 +688,8 @@
                 name: "Nils Mucke",
                 title: "Friseurgeselle",
                 photo: "Images/Nils_kl.jpg",
-                experience: "Seit 2013 lebe ich meinen Traum als Herrenfriseur. Ob klassisch und elegant oder modern und trendbewusst - ich liebe es, individuelle Styles zu kreieren, die perfekt zu dir passen. Auch Dauerwellen für Herren gehören zu meinen Leistungen und sorgen für abwechslungsreiche und stylische Looks. Im Damenfach bediene ich gerne die Kurzhaarkundinnen.",
-                personal: "Schon als kleiner Junge stand für mich fest: Ich will Friseur werden! Und jetzt wird's endlich Wirklichkeit - ab Januar 2026 eröffne ich zusammen mit meiner Frau Tina unseren eigenen Salon Mucke & Mähne in Taunusstein-Hahn. Wenn ich nicht gerade Haare schneide, verbringe ich am liebsten Zeit mit meiner Familie oder bin beim Laufen unterwegs - das gibt mir Energie und neue Ideen. Egal ob du einen zeitlosen Klassiker oder einen modernen Look willst - bei mir bekommst du deinen ganz persönlichen Style mit viel Leidenschaft, Präzision und Herzblut. Ich freue mich auf Sie!",
+                experience: "Seit 2013 lebe ich meinen Traum als Herrenfriseur. Ob klassisch und elegant oder modern und trendbewusst - ich liebe es, individuelle Styles zu kreieren, die perfekt zu Ihnen passen. Auch Dauerwellen für Herren gehören zu meinen Leistungen und sorgen für abwechslungsreiche und stylische Looks. Im Damenfach bediene ich gerne die Kurzhaarkundinnen.",
+                personal: "Schon als kleiner Junge stand für mich fest: Ich will Friseur werden! Und jetzt wird's endlich Wirklichkeit - ab Januar 2026 eröffne ich zusammen mit meiner Frau Tina unseren eigenen Salon Mucke & Mähne in Taunusstein-Hahn. Wenn ich nicht gerade Haare schneide, verbringe ich am liebsten Zeit mit meiner Familie oder bin beim Laufen unterwegs - das gibt mir Energie und neue Ideen. Egal ob Sie einen zeitlosen Klassiker oder einen modernen Look möchten - bei mir bekommen Sie Ihren ganz persönlichen Style mit viel Leidenschaft, Präzision und Herzblut. Ich freue mich auf Sie!",
                 services: [
                     "Herrenhaarschnitte alle Längen",
                     "Klassische Bartpflege & Rasur",
