index.html aktualisiert

--- a/index.html
+++ b/index.html
@@ -680,8 +680,7 @@
                     "Damenhaarschnitte & Styling",
                     "Komplexe Colorationen & Balayage",
                     "Naturlocken-Spezialistin",
-                    "RICA Chromoplus Behandlungen",
-                    "Hochsteckfrisuren & Event-Styling"
+                    "RICA Chromoplus Behandlungen"
                 ]
             },
             nils: {
